# haskell-ogar

./: .gitignore  README.md  haskell-ogar.cabal
app/: Main.hs
src/Lib/: Client.hs
